Update MaybankDebitStatementReader filters